syntax="proto3";
message Cashflow{
   double interest_amount = 1;
   double principal_amount = 2;
   int64 date = 3;
}
message Account{
 string id = 1;
 string account_number = 2;
 string cust_id = 3;
 string deal_name = 4;
 double principal_os = 5;
 int64 deal_start_date = 6;
 int64 cf_start_date = 7;
 int64 cf_end_date = 8;
 double accrued_interest = 9;
 double deal_value = 10;
 string gl_code = 11;
 string system_value = 12;
 double current_nominal_interest_rate = 13;
 string product_type = 14;
 string originator_name = 15;
 double contract_yield = 16;
 int64 payment_frequency = 17;
 string loan_reset_frequency = 18;
 string interest_rate_type = 19;
 int64 next_reset_date = 20;
 string borrower_constitution = 21;
 string pan = 22;
 string voter_id = 23;
 string external_benchmark = 24;
string dpd_in_days = 25;
int64 daily_dpd_reported_date = 26;
double due_from_customer = 27;
 double cmonth_emi_due = 28;
 double actual_amount_paid = 29;
 double principal_due_cmonth = 30;
 double principal_rcvd_cmonth = 31;
string interest_method_code = 32;
double bank_share = 33;
double originator_share = 34;
 double customer_od_bank_share = 35;
double customer_od_originator_share = 36;
double od_interest_bank_share = 37;
double od_interest_originator_share = 38;
 int64 maturity_date = 39;
 string exposure_unique_id = 40;
 int64 fic_mis_date = 41;
 int64 system_date = 42;
string balm_control_status_id = 43;
double derived_principal = 44;
double derived_cmonth_emi_due = 45;
 string npa_classification = 46;
string cust_hlth_code = 47;
string cust_npa_class = 48;
string final_npa_class = 49;
string currency = 50;
repeated Cashflow cashflows = 51;
}
